--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="style.css">
-
+  <div class="top"><h1>Roof</h1></div>
+  <div class="faketop"><h1>roof</h1><br></div>
 </head>
 
 <body>
   <script src="js/scripts.js"></script>
-  <div class="top"><h1>Roof</h1></div>
-  <div class="faketop"><h1>roof</h1></div>
-  <t>
+  <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porta elit sed odio accumsan, at bibendum eros vestibulum. Donec a aliquam ligula, quis consectetur elit. Sed posuere blandit arcu, eu blandit tortor tincidunt in. Suspendisse aliquam elementum justo, nec tristique diam faucibus non. Sed eget lacus molestie, facilisis dolor sed, aliquet quam. Ut bibendum pharetra diam non ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam interdum lectus vitae tincidunt ultrices.
 
     Nullam viverra augue dolor, a eleifend eros blandit non. Integer rhoncus ultrices mauris sed pellentesque. Pellentesque in rhoncus felis. Duis consectetur facilisis gravida. Praesent ut dui posuere, tristique nibh ut, blandit dui. Nullam scelerisque, elit ut aliquam luctus, dui velit dictum diam, et efficitur purus urna at felis. Nullam dapibus eros est, eu consectetur turpis molestie at. Vestibulum gravida, tellus egestas pretium mattis, mauris enim convallis sapien, in ullamcorper lacus mi a neque. Curabitur ultrices in mauris id hendrerit.
@@ -55,6 +54,6 @@
     
     Maecenas sed nisi aliquet, euismod est lacinia, luctus odio. Donec accumsan felis nisl, ac luctus erat interdum eget. Aliquam a nulla quis magna dictum mollis ac in metus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi magna augue, venenatis at suscipit in, gravida non augue. Maecenas ac est blandit purus consequat porta nec eu mauris. Morbi placerat mollis orci quis fermentum. Fusce eu est a odio viverra lacinia pharetra at libero. Fusce mattis ex ut tincidunt tempus. In bibendum bibendum lorem, et laoreet nulla.
     
-    Ut efficitur massa molestie nisl vehicula tincidunt. Vivamus auctor rhoncus nisl, quis lobortis urna congue et. Nullam molestie at augue nec vulputate. Mauris rhoncus pellentesque ipsum, ac varius enim. Nam laoreet dapibus risus, sit amet ornare turpis venenatis ut. Aliquam sem tortor, mattis at sagittis sed, auctor sed augue. In sollicitudin sapien et lectus scelerisque tincidunt.</t>
+    Ut efficitur massa molestie nisl vehicula tincidunt. Vivamus auctor rhoncus nisl, quis lobortis urna congue et. Nullam molestie at augue nec vulputate. Mauris rhoncus pellentesque ipsum, ac varius enim. Nam laoreet dapibus risus, sit amet ornare turpis venenatis ut. Aliquam sem tortor, mattis at sagittis sed, auctor sed augue. In sollicitudin sapien et lectus scelerisque tincidunt.</p>
 </body>
 </html>
