first real version woop woop

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <meta name="author" content="Roof">
 
   <link rel="stylesheet" href="style.css">
-  <div class="top"><h1 class="centertext">Roof</h1></div>
-  <div class="faketop"><h1>Easteregg</div>
+  <div class="faketop"><h1><br></h1></div>
 </head>
 
 <body>
   <script src="js/scripts.js"></script>
-  <br>
-  <br>
+  <div class="top"><h1 class="centertext">Roof</h1></div>
+  <div class="roof"><h1 class="centertext">Roof</h1></div>
   <h2>A BRIEF BIO</h2>
   <p>Hello.  I am Roof, an indie game developer.  I try my hardest to make new, fun, and original ideas.  On my YouTube Channel, I post coding related videos, ranging from dev logs to random side projects.  In my spare time, I enjoy playing piano, violin, chess, videogames, and chatting with friends.  </p>
   <h2>CURRENT PROJECTS</h2>
