updated for discord

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Roof</title>
-  <meta name="description" content="Roof">
+  <meta name="description" content="Roof's Development Website">
   <meta name="author" content="Roof">
 
   <link rel="stylesheet" href="style.css">
