--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <link rel=“icon” href="/favicon.ico">
   <title>Roof</title>
   <meta name="description" content="Roof's Development Website">
   <meta name="author" content="Roof">
 
   <link rel="stylesheet" href="style.css">
   <div class="faketop"><h1><br></h1></div>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
@@ -24,7 +26,5 @@
   <p>I mainly program in Python and C#, although I do like to occasionally use other languages such as HTML and CSS, which are the main languages powering this site.  To code, I use a mix of VSCode for non-game related work and Visual Studio and Unity.  I also use Aseprite and Photoshop for most graphics.  To edit my videos, I use Premiere Pro.</p>
   <div class="footer"><h1 class="centertext">  ‎‎ ‎ <a href="https://github.com/roofdev">‎<img src="GitHub-Mark-Light-120px-plus.png" height="5%" width="5%"></a><t>&nbsp&nbsp&nbsp</t><a href="https://www.instagram.com/roofdev/"><img src="IG_Glyph_Fill.png" height="5%" width="5%"></a><t>&nbsp&nbsp&nbsp&nbsp</t><img src="aaaaaa.png" height="0.70%" width="0.68%">&nbsp&nbsp&nbsproofdev.github.io</h1></div>
   <div class="footerbg"></div>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </body>
 </html>
