--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <p>I am currently working on a game nicknamed Weapons.  The main idea behind it is you have to get through a platforming game where your weapon is your character.  You can pick between a bow, sword, axe, and shield and swap weapons during the game.  Although development is slow at the moment because of school, I expect the game could be out by December 2021.</p>
   <h2>TOOLS I USE</h2>
   <p>I mainly program in Python and C#, although I do like to occasionally use other languages such as HTML and CSS, which are the main languages powering this site.  To code, I use a mix of VSCode for non-game related work and Visual Studio and Unity.  I also use Aseprite and Photoshop for most graphics.  To edit my videos, I use Premiere Pro.</p>
-  <div class="footer"><h1 class="centertext">  ‎‎ ‎ <a href="https://github.com/roofdev">‎<img src="GitHub-Mark-Light-120px-plus.png" height="5%" width="5%"></a><t>&nbsp&nbsp&nbsp</t><a href="https://www.instagram.com/roofdev/"><img src="IG_Glyph_Fill.png" height="5%" width="5%"></a><t>&nbsp&nbsp&nbsp&nbsp</t><img src="aaaaaa.png" height="0.70%" width="0.68%">&nbsp&nbsp&nbsproofdev.github.io</h1></div>
-  <div class="footerbg"></div>
+  <footer>
+    <div class="footer"><h1 class="centertext"><a href="https://github.com/roofdev">‎<img src="github.png"></a>&nbsp&nbsp&nbsp<a href="https://www.instagram.com/roofdev/"><img src="instagram.png"></a>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsproofdev.github.io</h1></div>
+    <div class="footerbg"></div>
+  </footer>
+  <div class="fakebg"><br></div>
 </body>
 </html>
