--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <div class="top"><h1 class="centertext">Roof</h1></div>
+  <div class="top"><h1 class="centertext"><a>Games</a> | Roof | <a>Projects</a></h1></div>
   <div class="roof"><h1 class="centertext">Roof</h1></div>
   <h2>A BRIEF BIO</h2>
   <p>Hello.  I am Roof, an indie game developer.  I try my hardest to make new, fun, and original ideas.  On my YouTube Channel, I post coding related videos, ranging from dev logs to random side projects.  In my spare time, I enjoy playing piano, violin, chess, videogames, and chatting with friends.  </p>
