--- a/index.html
+++ b/index.html
@@ -1,33 +1,22 @@
-<!doctype html>
+<html>
 
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <link rel=“icon” href="/favicon.ico">
-  <title>Roof</title>
-  <meta name="description" content="Roof's Development Website">
-  <meta name="author" content="Roof">
-
+  <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
+  <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
-  <div class="faketop"><h1><br></h1></div>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-  <div class="top"><h1 class="centertext"><a>Games</a> | Roof | <a>Projects</a></h1></div>
-  <div class="roof"><h1 class="centertext">Roof</h1></div>
-  <h2>A BRIEF BIO</h2>
-  <p>Hello.  I am Roof, an indie game developer.  I try my hardest to make new, fun, and original ideas.  On my YouTube Channel, I post coding related videos, ranging from dev logs to random side projects.  In my spare time, I enjoy playing piano, violin, chess, videogames, and chatting with friends.  </p>
-  <h2>CURRENT PROJECTS</h2>
-  <p>I am currently working on a game nicknamed Weapons.  The main idea behind it is you have to get through a platforming game where your weapon is your character.  You can pick between a bow, sword, axe, and shield and swap weapons during the game.  Although development is slow at the moment because of school, I expect the game could be out by December 2021.</p>
-  <h2>TOOLS I USE</h2>
-  <p>I mainly program in Python and C#, although I do like to occasionally use other languages such as HTML and CSS, which are the main languages powering this site.  To code, I use a mix of VSCode for non-game related work and Visual Studio and Unity.  I also use Aseprite and Photoshop for most graphics.  To edit my videos, I use Premiere Pro.</p>
-  <footer>
-    <div class="footer"><h1 class="centertext"><a href="https://github.com/roofdev">‎<img src="github.png"></a>&nbsp&nbsp&nbsp<a href="https://www.instagram.com/roofdev/"><img src="instagram.png"></a>&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsproofdev.github.io</h1></div>
-    <div class="footerbg"></div>
-  </footer>
-  <div class="fakebg"><br></div>
-</body>
+  <div class="header">
+    <div class="header-left"><h1 class="title">Roof, Best Waifu</h1></div>
+    <div class="header-right"><button><b>YouTube</b></button><t>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</t>
+      <button><b>osu!</b></button></div>
+  </div>
+  <div class="main-image"><img src="stonks.png"></div>
+  <div class="textbk"></div>
+  <div class="textbk2"></div>
+  <div class="quotebk"><h1 class="quote">"Kill or be killed"<br>- Roof 2021</h1></div>
+  <div class="descbk"><t class="desc">roof is a pro composer</t></div>
+  </body>
+
 </html>
