--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
 </head>
 
 <body>
-  <div class="header">
-    <div class="header-left"><h1 class="title">Roof, Best Waifu</h1></div>
-    <div class="header-right"><button><b>YouTube</b></button><t>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</t>
-      <button><b>osu!</b></button></div>
+  <div class="header"></div>
+  <div class="footer"></div>
+  <h1 class="text">Roof</h1>
+  <div class="buttons">
+    <button>YouTube</button>
+    <button>GitHub</button>
+    <button>osu!</button>
   </div>
-  <div class="main-image"><img src="stonks.png"></div>
-  <div class="textbk"></div>
-  <div class="textbk2"></div>
-  <div class="quotebk"><h1 class="quote">"Kill or be killed"<br>- Roof 2021</h1></div>
-  <div class="descbk"><t class="desc">roof is a pro composer</t></div>
-  </body>
-
 </html>
