--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="footer"></div>
   <h1 class="text">Roof</h1>
   <div class="buttons">
-    <button>YouTube</button>
-    <button>GitHub</button>
-    <button>osu!</button>
+    <button><a href="https://www.youtube.com/channel/UCOq9BMlgnsA5OrGVe7u65rg"><b>YouTube</b></a></button>
+    <button><a href="https://github.com/roofdev"><b>GitHub</b></a></button>
+    <button><a href="https://osu.ppy.sh/u/rufuchan"><b>osu!</b></a></button>
   </div>
 </html>
