--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
     <button><a href="https://github.com/roofdev"><b>GitHub</b></a></button>
     <button><a href="https://osu.ppy.sh/u/rufuchan"><b>osu!</b></a></button>
   </div>
+  <h1 class="texta"><div class="emphasis">Roof</div> is a composer, YouTuber, programmer, and gamer.</h1>
 </html>
