--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-</head>
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Roof" />
+  <meta property="og:description" content="Roof's Website" />
+  <meta property="og:url" content="https://roofdev.github.io" />
+  </head>
  
 <body>
   <div class="header"></div>
